<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lobbyBackground">
    <TextView
        android:id="@+id/lobbyTitle"
        android:text="@string/lobby_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@color/lobbyTitle"
        android:padding="10dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/lobbyTitle"
        app:layout_constraintBottom_toTopOf="@id/lobby_navBar">

        <LinearLayout
            android:id="@+id/lobby_roomList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/lobby_navBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/lobbyNavBar">
        <Button
            android:id="@+id/lobby_buildRoom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/lobbyNavButton"
            android:layout_margin="8dp"
            android:text="@string/lobby_btn_build"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/lobby_update"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/lobbyNavButton"
            android:layout_margin="8dp"
            android:text="@string/lobby_btn_update"
            android:textColor="@color/white"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>