<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/login_msgBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/login_title"/>
            <LinearLayout
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_account_label"
                    android:gravity="end"
                    android:labelFor="@id/login_account_input"/>

                <EditText
                    android:text="yaozh16"
                    android:id="@+id/login_account_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="@color/loginItemEntry" />
            </LinearLayout>
            <LinearLayout
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:weightSum="6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:text="@string/login_password_label"
                android:gravity="end"
                android:labelFor="@id/login_password_input"/>
            <EditText
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:maxLines="1"
                android:id="@+id/login_password_input"
                android:text="123456"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:background="@color/loginItemEntry"/>
        </LinearLayout>
            <LinearLayout
                android:id="@+id/login_config"
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/login_server_address_label"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="end"
                    android:labelFor="@id/login_address_input"/>
                <EditText
                    android:text="183.172.232.132"
                    android:textColor="@color/white"
                    android:inputType="numberDecimal"
                    android:id="@+id/login_address_input"
                    android:layout_marginStart="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:digits="0123456789."
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:background="@color/loginItemEntry"/>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_port"
                    android:gravity="end"
                    android:labelFor="@id/login_port_input"/>
                <EditText
                    android:text="2333"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:maxLines="1"
                    android:id="@+id/login_port_input"
                    android:layout_marginStart="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:background="@color/loginItemEntry"/>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="?android:attr/buttonBarStyle">
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/login_btn_register"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="@string/login_btn_register"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_height="wrap_content" />
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/login_btn_login"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="@string/login_btn_login"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_height="wrap_content" />
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/login_btn_exit"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="@string/login_btn_exit"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>