<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/config_background"
    android:scrollbarStyle="outsideInset">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/room_config_top_linear"
            android:layout_gravity="center_vertical"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical">
            <android.support.constraint.ConstraintLayout
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColorLink="@color/white"
                    android:background="@color/config_roomName_background"
                    android:textColorHighlight="@color/white"
                    android:id="@+id/room_config_roomName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:hint="@string/room_config_roomName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minWidth="250dp"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/room_config_buttonfield_linear"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/room_config_buttonfield_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:paddingBottom="15dp"
                    android:paddingTop="20dp"
                    android:weightSum="6"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
            <LinearLayout
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/room_config_speed"
                    android:textSize="15sp"
                    android:gravity="end"
                    android:labelFor="@id/room_config_speed"/>

                <SeekBar
                    android:layout_gravity="center"
                    android:id="@+id/room_config_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:digits="0123456789."
                    android:inputType="text"
                    android:max="4"
                    android:maxLines="1"
                    android:progress="2" />
            </LinearLayout>
            <LinearLayout
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/room_config_gameType"
                    android:textSize="15sp"
                    android:gravity="end"/>

                <RadioGroup
                    android:id="@+id/room_config_gameType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:checkedButton="@id/room_config_gameType_GluttonousSnake">

                    <RadioButton
                        android:textColor="@color/white"
                        android:id="@+id/room_config_gameType_GluttonousSnake"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:duplicateParentState="false"
                        android:text="@string/room_config_gameType_GluttonousSnake" />
                    <RadioButton
                        android:textColor="@color/white"
                        android:id="@+id/room_config_gameType_TankBattle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_config_gameType_TankBattle"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/room_config_gridWidth"
                    android:textSize="15sp"
                    android:gravity="end"
                    android:labelFor="@id/room_config_gridWidth"/>

                <zachary_yao.Universal.RangeNumberPicker
                    app:initValue="20"
                    app:maxValue="40"
                    app:minValue="10"
                    android:id="@+id/room_config_gridWidth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:digits="0123456789."
                    android:inputType="text"
                    android:maxLines="1" />
            </LinearLayout>
            <LinearLayout
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/room_config_gridHeight"
                    android:textSize="15sp"
                    android:gravity="end"
                    android:labelFor="@id/room_config_gridHeight"/>

                <zachary_yao.Universal.RangeNumberPicker
                    app:initValue="20"
                    app:maxValue="40"
                    app:minValue="10"
                    android:id="@+id/room_config_gridHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:digits="0123456789."
                    android:maxLines="1" />
            </LinearLayout>
            <LinearLayout
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/room_config_maxPlayer"
                    android:textSize="15sp"
                    android:gravity="end"
                    android:labelFor="@id/room_config_maxPlayer"/>

                <zachary_yao.Universal.RangeNumberPicker
                    app:initValue="2"
                    app:maxValue="4"
                    app:minValue="1"
                    android:id="@+id/room_config_maxPlayer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:digits="0123456789."
                    android:inputType="text"
                    android:max="5"
                    android:maxLines="1" />
            </LinearLayout>
            <LinearLayout
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/room_config_bonusCount"
                    android:textSize="15sp"
                    android:gravity="end"
                    android:labelFor="@id/room_config_bonusCount"/>

                <zachary_yao.Universal.RangeNumberPicker
                    app:initValue="5"
                    app:maxValue="20"
                    app:minValue="1"
                    android:id="@+id/room_config_bonusCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:digits="0123456789."
                    android:inputType="text"
                    android:max="5"
                    android:maxLines="1" />
            </LinearLayout>
            <LinearLayout
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/room_config_maxLife"
                    android:textSize="15sp"
                    android:gravity="end"
                    android:labelFor="@id/room_config_maxLife"/>

                <zachary_yao.Universal.RangeNumberPicker
                    app:initValue="5"
                    app:maxValue="20"
                    app:minValue="1"
                    android:id="@+id/room_config_maxLife"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:digits="0123456789."
                    android:inputType="text"
                    android:max="5"
                    android:maxLines="1" />
            </LinearLayout>
            <LinearLayout
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/room_config_holePair"
                    android:textSize="15sp"
                    android:gravity="end"
                    android:labelFor="@id/room_config_holePair"/>

                <zachary_yao.Universal.RangeNumberPicker
                    app:initValue="5"
                    app:maxValue="10"
                    app:minValue="0"
                    android:id="@+id/room_config_holePair"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
